2002-03-05  Roland McGrath  <roland@frob.com>

	* device.c (dev_map): Pass proper OFFSET and SIZE params to device_map.

2002-01-19  Roland McGrath  <roland@frob.com>

	Support explicit open of unknown store (with no name), i.e. -Tunknown.
	* unknown.c (unknown_allocate_encoding): Return EOPNOTSUPP
	if STORE->hook is null.
	(unknown_encode): Likewise.
	(unknown_cleanup): Do nothing if STORE->hook if is null.
	(unknown_clone): Likewise.
	(unknown_validate_name, unknown_open): New functions.
	(store_unknown_class): Use them.

2002-01-01  Roland McGrath  <roland@frob.com>

	* nbd.c (htonll): Make this a macro using bswap_64 from <byteswap.h>.

2001-12-31  Roland McGrath  <roland@frob.com>

	* url.c (url_decode): Don't clobber *ENC in the dummy run.

	* nbd.c (store_nbd_open): Make sure the store's name always
	starts with the "nbd://" prefix.

2001-12-30  Roland McGrath  <roland@frob.com>

	* nbd.c (nbd_read): Request multiple chunks of up to NBD_IO_MAX each.
	Handle needing multiple io_read calls to receive a single chunk.

2001-12-29  Roland McGrath  <roland@frob.com>

	* nbd.c (nbdopen): Fix in last change.
	(nbd_read): Let LEN receive the result count from io_read.

	* nbd.c (NBD_IO_MAX): New macro.
	(nbd_write): Write in chunks no larger than NBD_IO_MAX.
	(nbd_read): Cap AMOUNT to NBD_IO_MAX.

	* nbd.c (nbd_validate_name): Skip : before port number.
	(nbdopen): Fix test after connect loop.
	Use multiple read calls as needed to get the whole connection header.

2001-12-26  Roland McGrath  <roland@frob.com>

	* unknown.c: New file.
	* Makefile (SRCS): Add it.
	* store.h (store_unknown_class, store_unknown_decode): Declare them.
	* create.c (store_create): If store_decode fails with EINVAL,
	and we were called with the STORE_NO_FILEIO flag bit set,
	then use store_unknown_decode.

2001-12-23  Roland McGrath  <roland@frob.com>

	* kids.c (store_set_child_flags): Move decrement to avoid ill-defined
	C behavior that gets a warning.
	(store_clear_child_flags): Likewise.